# QuantTradingLucky

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: LEARNING_PLAN.md  markets-101.md  pitfalls.md
docs/monthly-review/: 2026-03.md  2026-04.md  TEMPLATE.md
notebooks/: M01_eda.ipynb  README.md
reports/: README.md
scripts/: build_m01_notebook.py
src/quant_lucky/: __init__.py  __main__.py  cli.py
src/quant_lucky/alpha/: __init__.py
src/quant_lucky/backtest/: __init__.py
src/quant_lucky/costs/: __init__.py  base.py  calculator.py  models.py
src/quant_lucky/crypto/: __init__.py
src/quant_lucky/data/: __init__.py  base.py  downloader.py  schema.py  store.py
src/quant_lucky/data/providers/: __init__.py  ccxt_provider.py  tushare_provider.py  yfinance_provider.py
src/quant_lucky/derivatives/: __init__.py
src/quant_lucky/factors/: __init__.py
src/quant_lucky/indicators/: __init__.py
src/quant_lucky/ml/: __init__.py
src/quant_lucky/portfolio/: __init__.py
src/quant_lucky/risk/: __init__.py
src/quant_lucky/universe/: __init__.py  base.py  crypto_topn.py  csi300.py  sp500.py  static.py
src/quant_lucky/utils/: __init__.py  config.py  logging.py
strategies/: README.md
tests/: conftest.py  test_smoke.py
tests/costs/: __init__.py  test_base.py  test_calculator.py  test_models.py
tests/data/: test_downloader.py  test_schema.py  test_store.py
tests/universe/: __init__.py  test_base.py  test_crypto_topn.py  test_static.py  test_stock_universes.py
tests/utils/: test_config.py
