[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-lucky"
version = "0.1.0"
description = "从零开始的量化交易学习项目 - 覆盖 A股/美股/加密/期货四大市场"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Luka" }]
keywords = ["quant", "trading", "finance", "learning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Scientific computing
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=0.20",
    "scipy>=1.12",
    # Visualization
    "matplotlib>=3.8",
    "plotly>=5.18",
    "seaborn>=0.13",
    # Statistics / ML
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "arch>=6.3",
    # Optimization
    "cvxpy>=1.4",
    # Data sources
    "tushare>=1.2.89",
    "akshare>=1.12",
    "yfinance>=0.2.40",
    "ccxt>=4.2",
    # Storage
    "pyarrow>=15",
    "duckdb>=0.10",
    # Utilities
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "rich>=13",
    "tqdm>=4.66",
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.6",
    "nbstripout>=0.7",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
    "types-requests",
]
ml = [
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "shap>=0.45",
]
backtest = [
    # Reference frameworks for comparison during self-implementation
    "vectorbt>=0.26",
    "backtrader>=1.9.78",
]

[project.urls]
Repository = "https://github.com/luka/QuantTradingLucky"

[project.scripts]
quant = "quant_lucky.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_lucky"]

# ---------------------------------------------------------------------------
# Ruff: linter + formatter (replaces black + isort + flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks", "data", "reports"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PL",   # pylint
    "TRY",  # tryceratops (better exceptions)
]
ignore = [
    "E501",    # line too long -> handled by formatter
    "PLR0913", # too many arguments (common in quant code)
    "PLR2004", # magic values (common in financial constants)
    "TRY003",  # long exception messages OK here
    "RUF001",  # allow full-width characters (Chinese punctuation) in strings
    "RUF002",  # allow full-width characters in docstrings
    "RUF003",  # allow full-width characters in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
"notebooks/**" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy: type checking (start lenient, tighten per-module over time)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false       # TODO: enable module-by-module
ignore_missing_imports = true
show_error_codes = true
pretty = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=quant_lucky",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (skip with -m 'not slow')",
    "integration: integration tests requiring network access",
    "live: tests that hit real data sources (run manually)",
]

[tool.coverage.run]
source = ["src/quant_lucky"]
omit = ["*/tests/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
